--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,5 @@
 .App {
-  text-align: center;
-  position: absolute;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
   background-color: yellow;
-  top: 0;
-  padding: 0px;
 
 }
  
@@ -21,9 +14,7 @@ Colors:
     max-width: 100%;
     max-height: 100%;
 }
-#Landimg-buttons{
-    background-color: white;
-}
+
 #Contenedor-texto-main {
     padding-left: 20%;
     padding-top: 4%;
@@ -31,15 +22,17 @@ Colors:
 }
 
 .boton-landing {
-    background-color: #242526;
-    color: #E4E6EB;  
-    border: 1px solid;
-    box-shadow: 5px 7px;  
-    font-size: 21px;    
+    background-color: #18191A;
+    color: #B0B3B8;
+    border: 3px solid;
+    box-shadow: 5px 6px;  
+    font-size: 21px; 
+    font-weight: 50;  
 }
 
 .boton-landing:hover {
     background-color: #E4E6EB;
     color: #18191A;    
+    font-weight: bold;
 }
 
